labs/lab-08/deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-egress
  namespace: lab08-$STUDENT_NAME
spec:
  podSelector: {}
  policyTypes:
  - Egress
